log
Fri Mar 18 14:24:14 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:35: error: expected expression before ‘,’ token
     List *lista = (List *) calloc(,sizeof(List));
                                   ^
Compilation failed
d5c322c
Fri Mar 18 14:24:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6157cbe
Fri Mar 18 14:31:36 UTC 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|5
total_score: 15/70
6681473
Fri Mar 18 14:49:31 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
e86c120
Fri Mar 18 14:52:33 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
da39851
Fri Mar 18 14:58:38 UTC 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a20c618
Fri Mar 18 15:09:01 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
767dbd8
Fri Mar 18 16:53:16 UTC 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:92:12: error: ‘List {aka struct List}’ has no member named ‘next’
       list -> next -> prev = nodo;
            ^~
Compilation failed
3111ff8
Fri Mar 18 16:54:21 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
9b26c77
Fri Mar 18 22:59:07 UTC 2022: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
2954728
Fri Mar 18 23:00:16 UTC 2022: 
 list.c | 19 -------------------
 1 file changed, 19 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:88:11: error: unused variable ‘nodo’ [-Werror=unused-variable]
     Node *nodo = createNode(data);
           ^~~~
cc1: all warnings being treated as errors
Compilation failed
0744eed
Fri Mar 18 23:00:29 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
152819b
Sat Mar 19 16:22:58 UTC 2022: 
 list.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
ba1b7e1
Sat Mar 19 17:46:38 UTC 2022: 
 list.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:143:5: error: expected ‘;’ before ‘return’
     return auxData;
     ^~~~~~
list.c:120:11: error: unused variable ‘auxData’ [-Werror=unused-variable]
     void *auxData = aux-> data;
           ^~~~~~~
list.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1dd30de
